Adding support for sca-contribution.xml to defaultSCADomain
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@538401 13f79535-47bb-0310-9956-ffa450edef68